# openvslam

./: .gitignore  CMakeLists.txt  Dockerfile.dev  Dockerfile.python  Dockerfile.wheels  README_custom.md  setup.py
example/: run_tum_rgbd_slam.py
python/: CMakeLists.txt  README.md  bindings.cc  my_rgbd_slam.cc  my_rgbd_slam.h  test.py
scripts/: bootstrap.sh  bootstrap_manylinux.sh  build.sh  env.sh  install_external_dependencies_centos.sh  install_external_dependencies_ubuntu.sh  install_external_dependencies_ubuntu14.sh  install_openvslam_dependencies.sh
src/openvslam/: system.cc  system.h  tracking_module.cc  tracking_module.h
src/openvslam/publish/: map_publisher.h
src/pangolin_viewer/: viewer.cc
